--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,121 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/enterName_label"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/weekdays"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NAME  "
-            android:textSize="24sp" />
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+            <TextView
+                android:text="NAME"
+                style="@style/weekdays"
+                android:layout_weight="1"/>
+            <TextView
+                android:text="MON (0)"
+                style="@style/weekdays"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:text="TUE (0)"
+                style="@style/weekdays"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:text="WED (0)"
+                style="@style/weekdays"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:text="THU(0)"
+                style="@style/weekdays"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:text="FRI (0)"
+                android:layout_weight="1"
+                style="@style/weekdays"
+                />
 
-        <TextView
-            android:id="@+id/mon_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MON"
-            android:textSize="24sp" />
+            <TextView
+                android:text="      TOTAL"
+                android:layout_weight="1"
+                style="@style/weekdays"
+                />
+        </LinearLayout>
+        <ListView
+            android:id="@+id/list"
+            app:layout_constraintTop_toBottomOf="@id/weekdays"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/tues_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TUES"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/wed_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="WED"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/thurs_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="THURS"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/fri_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="FRI"
-            android:textSize="24sp" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <EditText
-            android:id="@+id/enterName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Name"
-            android:ems="5"
-            android:inputType="textPersonName"
-            android:textSize="24sp" />
-
-        <Spinner
-            android:id="@+id/mon_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <Spinner
-            android:id="@+id/tues_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <Spinner
-            android:id="@+id/wed_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <Spinner
-            android:id="@+id/thurs_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <Spinner
-            android:id="@+id/fri_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/days_wanted"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DAYS WANTED"
-            android:textSize="24sp" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/minimum_days"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MINIMUM DAYS"
-            android:textSize="24sp" />
-
-    </TableRow>
-</TableLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
